fixed word wrap and button alignment

--- a/wp-content/themes/headstrong/css/styles.030.css
+++ b/wp-content/themes/headstrong/css/styles.030.css
@@ -766,6 +766,7 @@
 .bottom-cta__button {
   background-color: #c1272c;
   border-radius: 8px;
+  display: inline-block;
   float: right;
   margin: 0 0 10px 0;
   padding: 5px 10px;
@@ -774,7 +775,8 @@
 .bottom-cta__text {
   display: inline-block;
   font-weight: normal;
-  margin: 5px 30px 0 0;
+  margin: 5px 30px 5px 0;
+  max-width: calc(100% - 105px);
 }
 
 .bottom-cta__thermometer {
@@ -801,6 +803,11 @@
 
 .bottom-cta {
   font-size: 16px;
+  padding: 12px 25px 12px 15px;
+}
+
+.bottom-cta__text {
+  max-width: calc(100% - 95px);
 }
 
 }
